build.gradle.kts updated